# GNN-TabPFN

./: README.md  environment.gcn_tabpfn-py311.yml  pyproject.toml  run_all_experiments.cmd  tmp_tabpfn_test.py  tmp_tabpfn_test2.py
examples/: check_tabpfn_differentiable.py  load_planetoid_datasets.py  tabpfn_adapter.py  train_gcn_planetoid.py
outputs/: CiteSeer_final_embedding.pt  CiteSeer_inspect_layer_embedding.pt  CiteSeer_tabpfn_pred.pt  citeseer_sage_linear_final_embedding.pt  citeseer_sage_linear_inspect_layer_embedding.pt  citeseer_sage_linear_linear_pred.pt  citeseer_sage_tabpfn_final_embedding.pt  citeseer_sage_tabpfn_inspect_layer_embedding.pt  citeseer_sage_tabpfn_tabpfn_pred.pt  citeseer_sum_tabpfn_final_embedding.pt  citeseer_sum_tabpfn_fusion_weights.pt  citeseer_sum_tabpfn_inspect_layer_embedding.pt  citeseer_sum_tabpfn_tabpfn_pred.pt  citeseer_tabpfn_bagging_final_embedding.pt  citeseer_tabpfn_bagging_fusion_weights.pt  citeseer_tabpfn_bagging_inspect_layer_embedding.pt  citeseer_tabpfn_bagging_tabpfn_pred.pt  citeseer_weighted_joint_tabpfn_final_embedding.pt  citeseer_weighted_joint_tabpfn_fusion_weights.pt  citeseer_weighted_joint_tabpfn_inspect_layer_embedding.pt  citeseer_weighted_joint_tabpfn_tabpfn_pred.pt  citeseer_weighted_tabpfn_final_embedding.pt  citeseer_weighted_tabpfn_fusion_weights.pt  citeseer_weighted_tabpfn_inspect_layer_embedding.pt  citeseer_weighted_tabpfn_tabpfn_pred.pt  citseer_gcn_frozen_tabpfn_final_embedding.pt  citseer_gcn_frozen_tabpfn_inspect_layer_embedding.pt  citseer_gcn_frozen_tabpfn_tabpfn_pred.pt  (+45 more)
tests/: conftest.py  (+1 more)
(+33 files in other folders)
